# skippy-xd

./: .gitignore  CHANGELOG  Makefile  README.md  meson.build  meson.options  skippy-xd.1  skippy-xd.1.in  skippy-xd.rc  version.txt
.github/workflows/: build-appimage.yml  build-rpm.yml
Packaging/ArchLinux/: PKGBUILD
Packaging/RPM/: skippy-xd.spec
debian/: control
src/: clientwin.c  clientwin.h  config.c  fifo.c  fifo.h  mainwin.c  parse.c  parse.h  skippy.c  skippy.h  tooltip.c  tooltip.h  wm.c  wm.h
tests/: test_config.c  test_core.c
